idf_component_register(
    SRCS
        "main.c"
        "wifi_ap.c"
        "pwm_control.c"
        "bme280.c"
        "temp_control.c"
        "night_mode.c"
        "webserver.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        esp_http_server
        esp_driver_ledc
        esp_driver_i2c
        esp_timer
    EMBED_FILES
        "web/index.html"
)
